fix spacing in theather mode and header

--- a/src/components/Series/video.css
+++ b/src/components/Series/video.css
@@ -16,7 +16,7 @@
 }
 
 .video-container.theater {
-  max-height: 85vh;
+  max-height: 87.5vh;
 }
 
 .video-container.full-screen {
@@ -73,7 +73,8 @@ video {
 
 .video-container:hover .video-controls-container,
 .video-container:focus-within .video-controls-container,
-.video-container.paused .video-controls-container, .video-container:hover .video-header {
+.video-container.paused .video-controls-container,
+.video-container:hover .video-header {
   opacity: 1;
 }
 
